--- a/task 2 of final assessment.Rmd
+++ b/task 2 of final assessment.Rmd
@@ -264,6 +264,51 @@ plot_histogram(df1_clean)
 
 2. Select an initial subset of explanatory variables that you will use to predict the risk of in-hospital death. Justify your choice.
 
+A few key relationships stick out between variables looking at this graph:
+
+* The 'Creatinine' variables (min, diff, max) are positively correlated with corresponding 'BUN' Blood Urea Nitrogen variables.
+* Systolic ABP values are positively correlated with corresponding Diasystolic ABP values with corresponding MAP values (especially the minimum values).
+
+
+From this graph we can make a preliminary assessement about which predictor variables will be suitable for logistic regression analysis. We can select for predictor variables which are not highly correlated with each other, but are correlated with our 'in_hospital_death' outcome variable.
+
+
+\*Note that as a team we have decieded to select similar variables for both the survival analysis and Linear modelling portions of the assessment due to the clinical relevance of these variables as both survival and death predictors. However, within each modelling task different categories of these variables have been selected (eg. Creatinine_max in linear modelling rather than Creatinine_min used in our survival analysis). This was based upon preliminary exploratory data analysis.
+
+We chose to select the following variables with our justifications basing on background knowledge.
+
+----Descriptor Variables:
+Age, Gender (demograhpic variables) and ICU type are critical in predicting survival. The ICUType variable is for ascertaining which departments have differing death rates.
+
+----Clinical Information Variables:
+--Summary indicator
+SAPS1: SAPS correctly classifies patients in groups of increasing probability of death. This scoring system was created using 14 biological/clincial indicators Specifically for ICU paitents facilitate multicentre studies and outcome comparisons. Positively correlated with in_hospital_death.
+SOFA score: SOFA score is highly correlated to mortality among critical patients. For the GLM part, both indicators were used, however for the survival analysis, only SOFA was used in the univariate model.
+
+--Liver function indicator:
+Albumin_min: albumin is a marker for the goodness of liver function and it can be supplemented by injections. Therefore, if the maximum albumin amount was still low after treatment, the survival days of the patients would be shorter. No strong correlations between other predictor variables, other than other ablumin variables eg. Albumin_max - which we will not include in the analysis.
+
+--Kidney function indicator:
+Creatinine_max, BUN_min: both are markers for the badness of kidney function and it can be decreased by blood purification. Therefore, if the minimum amount was still high after treatment, the survival days of the patients would be shorter. Because they measure the same function (kidney function), univaribale analysis will be conducted on both and the one with smaller p-value will be chosen for the multivariable model.
+
+High levels (above 250) are a clincial indicator of renal failure, which is a very serious complication somtimes requiring dialysis. Creatinine and BUN are both highly correlated with each other.
+
+--Central nervous function indicator:
+GCS_max: GCS score is a marker for the goodness of central nervous function. If the maximum score were still low after treatment, the survival days of the patients would be shorter.
+
+--Cardiovascular function indicator:
+TropI_max and TropT_max: both are markers to assess the severity of myocardial damage, and the concentration of them are proportional to the the severity. If the maximum level is high, the risk of death because of heart failure will be increasing, leading to the shorter survival time. Therefore, one of the two predictors will chosen depending on the outputs of the univariable analysis.
+MAP_max_clean and MAP_min_clean: both are essential to assess the cardiovascular funtion.
+
+--Respiratory function indicator:
+PaO2_max: PaO2 is a marker for the goodness of the respiratory function. If the maximum amount of PaO2 is still low after treatment, the survival time of a patient will be shorter.
+PaCO2_diff: PaCO2 is a sensitive marker for assessing gas exchange inside the lungs. If the extreme value of PaCO2 is far away from the mean value, it means higher probability of a patient lack of breathing.
+
+--Coagulation function indicator:
+Platelets_max: Platelets is a marker for the goodness of coagulation function and it can be supplemented by injection. Therefore, if the maximum platelets amount were still low after treatment, the survival days of the patients would be shorter.
+
+--Infection indicator
+WBC_min: is a indicator for the severity of infection. If the minimum amount of WBC is still high after using antibiotic, then the survival time will be shorter.
 
 
 ###Look at discrete variable correlations
@@ -274,92 +319,12 @@ plot_histogram(df1_clean)
 plot_correlation(na.omit(df1_clean), maxcat = 5L, type = "d")
 ```
 
-_Most ICU admissions are negatively correlated with other ICU admissions. This is intuative as it is rare to require multiple different ICU admissions except in complex patients. Cardiac Surgery Recovery ICU and Surgical ICU are the most negatively correlated at -0.46._
+_Most ICU admissions are negatively correlated with other ICU admissions. This is intuitive as it is rare to require multiple different ICU admissions except in complex patients. Cardiac Surgery Recovery ICU and Surgical ICU are the most negatively correlated at -0.46._
 
 ```{r}
 plot_correlation(na.omit(icu_patients_df1), maxcat = 5L, type = "c")
 ```
 
-A few key relationships stick out between variables looking at this graph:
-
-* The 'Creatinine' variables (min, dif, max) are positively correlated with corresponding 'BUN' Blood Urea Nitrogen variables.
-* Systolic ABP values are positively correlated with corresponding Diasystolic ABP values with corresponding MAP values (especially the minimum values).
-
-
-From this graph we can make a preliminary assessement about which predictor variables will be suitable for logistic regression analysis. We can select for predictor variables which are not highly correlated with each other, but are correlated with our 'in_hospital_death' outcome variable.
-
-
-\*Note that as a team we have decieded to select similar variables for both the survival analysis and Linear modelling portions of the assessment due to the clinical relevance of these variables as both survival and death predictors. However, within each modelling task different categories of these variables have been selected (eg. Creatinine_max in linear modelling rather than Creatinine_min used in our survival analysis). This was based upon preliminary exploratory data analysis.
-
-1. Age (years) - Age
-
-2. Gender (0: female, or 1: male) - Gender
-
-* Standard to include within medical modelling.
-
-3. ICU category - ICUType
-
-*
-
-3. SAPS-I score - SAPS1
-
-* This scoring system was created using 14 biological/clincial indicators Specifically for ICU paitents facilitate multicentre studies and outcome comparisons.
-* Positively correlated with in_hospital_death.
-
-4. SOFA Score - SOFA
-
-* 
-
-5. Albumin min - Albumin_min
-
-*no strong correlations between other predictor variables, other than other ablumin variables eg. Albumin_max - which we will not include in the analysis.
-
-6. Serum creatinine (mg/dL) - Creatinine_max
-
-* High levels (above 250) are a clincial indicator of renal failure, which is a very serious complication somtimes requiring dialysis.
-* strongly Correlated with BUN but also weakly correlated with in_hospital_death.
-
-7. Blood urea nitrogen (mg/dL) - BUN min
-
-* Predictor of kindey impairment
-
-8. Glasgow Comas Score - GCS_max
-
-* The Glasgow Coma Scale provides a score in the range 3-15; patients with scores of 3-8 are usually said to be in a coma.
-* Strongly Negatively correlated with in_hospital_death
-
-9. Troponin I - TroponinI_max
-
-* Predictor of cardiovascular impairment, Troponin in released from the heart myocardium and is indicative of damage to the heart.
-
-10. Troponin T - TroponinT_max
-
-* 
-
-11. MAP_max
-
-12. MAP_min
-
-13. Arterial O2 Concentration (%) - PaO2_max
-
-* Oxygen Concentration in blood vessels transporting oxygenated blood to the body.
-* Negatively correlated with in_hospital_death.
-
-14. Arterial CO2 Concentration (%) - PaCO2_diff
-
-15. Platelets - Platelets_max
-
-* 
-
-16. Serum creatinine (mg/dL) - Creatinine_max
-
-* High levels (above 250) are a clincial indicator of renal failure, which is a very serious complication somtimes requiring dialysis.
-* strongly Correlated with BUN but also weakly correlated with in_hospital_death.
-
-17. Infection Indicator - WBC_min
-
-* indicator for infection
-* Negatively correlated with in_hospital_death.
 
 
 
@@ -391,7 +356,6 @@ for(i in univariate_mods){
 }
 ```
 
-_SaO2, Weight, and Height Variables were not sigificant. Retain Weight and Height as these are standard to include in medical modelling._
 
 4. Fit an appropriate series of multivariable logistic regression models, justifying your approach. Assess each model you consider for goodness of fit and other relevant statistics.
 
@@ -465,7 +429,7 @@ PaO2_max: PaO2 is a marker for the goodness of the respiratory function. If the 
 PaCO2_diff: PaCO2 is a sensitive marker for assessing gas exchange inside the lungs. If the extreme value of PaCO2 is far away from the mean value, it means higher probability of a patient lack of breathing.
 
 --Coagulation function indicator:
-Platelets_max: platelets ia a marker for the goodness of coagulation function and it can be supplemented by injection. Therefore, if the maximum platelets amount were still low after treatment, the survival days of the patients would be shorter.
+Platelets_max: Platelets ia a marker for the goodness of coagulation function and it can be supplemented by injection. Therefore, if the maximum platelets amount were still low after treatment, the survival days of the patients would be shorter.
 
 --Infection indicator
 WBC_min: is a indicator for the severity of infection. If the minimum amount of WBC is still high after using antibiotic, then the survival time will be shorter.
@@ -478,6 +442,9 @@ WBC_min: is a indicator for the severity of infection. If the minimum amount of 
 #Identify the number of rows (patients)
 n = nrow(df1_clean)
 n
+
+options(max.print=999999)
+skim(df1_clean) %>% skimr::kable()
 
 summary(df1_clean$Status)
 
