--- a/Rory-Udoy Final-assignment.Rmd
+++ b/Rory-Udoy Final-assignment.Rmd
@@ -1,9 +1,11 @@
 ---
 title: "HDAT9600 Final Assignment"
-subtitle: "Submission deadline is 5pm Friday 23 2019 "
 author: "insert your team name here"
 date: "insert date of completion here"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
+subtitle: 'Submission deadline is 5pm Friday 23 2019 '
 ---
 
 ```{r setup, include=FALSE}
@@ -234,6 +236,8 @@ plot_histogram(icu_patients_df1)
 
 
 
+
+
 ```{r}
 plot_correlation(na.omit(icu_patients_df1), maxcat = 5L, type = "d")
 ```
@@ -307,7 +311,7 @@ From this graph we can make a preliminary assessement about which predictor vari
 
 13. Height (cm) - Height
 
-* Standard to include within medical modelling.
+* Standard to include within medical modelling. However, due to the numerous missing values, it will not be included.
 
 14. Weight (kg) - Weight
 
@@ -318,7 +322,7 @@ From this graph we can make a preliminary assessement about which predictor vari
 ###Scatterplot 
 
 ```{r}
-arr_delay_df2 <- icu_patients_df1[, c("in_hospital_death", "Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Height", "Weight_diff")]
+arr_delay_df2 <- icu_patients_df1[, c("in_hospital_death", "ICUType", "SAPS1", "SOFA", "Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Weight_diff", "Urine_diff")]
 
 plot_scatterplot(arr_delay_df2, by = "in_hospital_death", sampled_rows = 1000L)
 ```
@@ -332,7 +336,7 @@ _investigation of relationships between "in_hospital_death" and chosen predictor
 
 ```{r echo=TRUE}
 #put column names into a variable 
-categorical_vars <- c("Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Height", "Weight_diff")
+categorical_vars <- c("ICUType", "SAPS1", "SOFA", "Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Weight_diff", "Urine_diff")
 
 univariate_mods <- c() #initialise an empty list of vectors for the loop
 
@@ -354,7 +358,7 @@ _SaO2, Weight, and Height Variables were not sigificant. Retain Weight and Heigh
 
 ```{r}
 #put column names into a variable 
-categorical_vars <- paste(c("Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "Height", "Weight_diff"), collapse = " + ")
+categorical_vars <- paste(c("ICUType", "SAPS1", "SOFA", "Albumin_min", "Bilirubin_max", "Creatinine_max", "HCO3_diff", "SAPS1", "BUN_min", "GCS_max", "pH_min", "Glucose_max", "SaO2_max", "Weight_diff", "Urine_diff"), collapse = " + ")
 
 modelformula <- paste("in_hospital_death ~ ", categorical_vars)
 
@@ -364,6 +368,13 @@ summary(multivariate_mod)
 ```
 
 5. Present your final model. Your final model should **not** include all the predictor variables, just a small subset of them, which you have selected based on statistical significance and/or background knowledge.
+
+```{r}
+
+```
+
+
+
 
 6. For your final model, present a set of diagnostic statistics and/or charts and comment on them.
 
